fieldx/tests/uncompilable/1.78+serde,async-lock,clonable-lock/private.stderr
error: feature 'sync' is required
 --> tests/uncompilable/private.rs
  |
  |     #[fxstruct(sync)]
  |                ^^^^

error[E0433]: failed to resolve: could not find `Inner` in `inner`
  --> tests/uncompilable/private.rs
   |
   |     let inner = inner::Inner::new();
   |                        ^^^^^ could not find `Inner` in `inner`
   |
help: there is an enum variant `syn::AttrStyle::Inner`; try using the variant's enum
   |
18 |     let inner = syn::AttrStyle();
   |                 ~~~~~~~~~~~~~~

error[E0412]: cannot find type `Inner` in this scope
  --> tests/uncompilable/private.rs
   |
   |     impl Inner {
   |          ^^^^^ not found in this scope
   |
help: there is an enum variant `syn::AttrStyle::Inner`; try using the variant's enum
   |
10 |     impl syn::AttrStyle {
   |          ~~~~~~~~~~~~~~
